# arxiv-researcher

./: .gitignore  Readme.md  pyproject.toml
arxiv_researcher/backend/src/: llm.py  main.py
backend/: pyproject.toml  requirements.txt
backend/src/: llm.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  ArxivResearcher.jsx  index.css
